force-app/main/default/objects/Portal_Content__c/Portal_Content__c.object-meta.xml
<CustomObject>
    <description>Structured portal content managed by Salesforce content managers and rendered in Experience Cloud.</description>
    <label>Portal Content</label>
    <nameField>
        <label>Portal Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>