force-app/main/default/objects/Portal_Content__c/fields/Content_Summary__c.field-meta.xml
<CustomField>
    <fullName>Content_Summary__c</fullName>
    <description>Short summary displayed on portal cards and listing pages.</description>
    <label>Content Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>