force-app/main/default/objects/Portal_Content__c/fields/Content_Title__c.field-meta.xml
<CustomField>
    <fullName>Content_Title__c</fullName>
    <description>Public title displayed in portal content listings and detail views.</description>
    <label>Content Title</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
</CustomField>