force-app/main/default/objects/Portal_Content__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Editorial type used for filtering, placement, and display treatment.</description>
    <label>Content Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Announcement</fullName>
                <default>true</default>
                <label>Announcement</label>
            </value>
            <value>
                <fullName>Story</fullName>
            </value>
            <value>
                <fullName>Event Promotion</fullName>
            </value>
            <value>
                <fullName>Giving Promotion</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>