force-app/main/default/objects/Portal_Content__c/fields/CTA_Label__c.field-meta.xml
<CustomField>
    <fullName>CTA_Label__c</fullName>
    <description>Short public label for the content call to action.</description>
    <label>CTA Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>