force-app/main/default/objects/Portal_Content__c/fields/CTA_URL__c.field-meta.xml
<CustomField>
    <fullName>CTA_URL__c</fullName>
    <description>Destination URL for the content call to action.</description>
    <label>CTA URL</label>
    <type>Url</type>
</CustomField>