force-app/main/default/objects/Portal_Content__c/fields/Image_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Image_Alt_Text__c</fullName>
    <description>Accessible alternative text required when a content image is displayed.</description>
    <label>Image Alt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>