force-app/main/default/objects/Portal_Content__c/fields/Publish_End__c.field-meta.xml
<CustomField>
    <fullName>Publish_End__c</fullName>
    <description>Optional date and time after which this content should no longer display in the portal.</description>
    <label>Publish End</label>
    <type>DateTime</type>
</CustomField>