force-app/main/default/objects/Portal_Content__c/fields/Publish_Start__c.field-meta.xml
<CustomField>
    <fullName>Publish_Start__c</fullName>
    <description>First date and time this content is eligible to display in the portal.</description>
    <label>Publish Start</label>
    <type>DateTime</type>
</CustomField>